2004-01-08  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_configure): Skip AC_CONFIG_LINKS items which
	do not look like DEST:SRC.
	* tests/conflnk3.test: Check for AC_CONFIG_LINKS($computed).

2003-01-07  Eric Sunshine  <sunshine@sunshineco.com>  (tiny change)

	* lib/am/configure.am (am__CONFIG_DISTCLEAN_FILES): Add
	config.status.lineno.

2004-01-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)

	* doc/automake.texi (Rebuilding): Typo.

2004-01-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* THANKS: Add Bruce Korb.

	* automake.in, aclocal.in: Bump copyright years.

	* configure.ac, NEWS: Bump version to 1.8.0c.

	* configure.ac, NEWS: Bump version to 1.8.0b.

2004-01-05  Alexandre Duret-Lutz  <adl@gnu.org>

	Mimic Paul Eggert's changes to Autoconf.
	* Makefile.am (automake, aclocal): Use `chmod a-w', not `chmod -w'.
	* lib/Automake/Makefile.am (Config.pm): Likewise.
	* m4/Makefile.am ($(top_srcdir)/m4/amversion.m4): Likewise.

	* lib/am/data.am, lib/am/lisp.am, lib/am/python.am,
	lib/am/scripts.am: Strip any leading $(srcdir) from nobase_ files.
	This fixes installation of nobase_ files in VPATH setups with Sun
	and OSF1/Tru64 Make.
	* tests/nobase.test: Augment to check installation from VPATH
	builds.

2004-01-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/texinfo.tex: New upstream version.

	* NEWS: Summarize recent fixes.

	* m4/mkdirp.m4: Do not use `-m 0755'.  This overrides special bits
	and break setups where 775 directories are expected.  Just obey
	umask as we did in the past.
	Report from Harlan Stenn.

2004-01-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_texinfo_file): Do not compare $outfile to ''
	as $outfile might not be defined at all.

	* lib/Automake/Variable.pm (define): Rework the way we check
	Automake variable definition.  Ensure consistent :=/+=/=
	definitions only for variables that have been and are defined by
	Automake, and make it an internal error.  Ignore Automake