@@ -1,3 +1,9 @@
+We should arrange so that install-%DIR%%PRIMARY% is run conditionally
+when %DIR%_%PRIMARY% is defined conditionally.  Currently it is always
+run, and that will therefore always create %DIR% (unless %DIR%dir is
+also defined conditionally).  Likewise, installdirs should not
+create %DIR% in conditions were no %DIR%_%PRIMARY% is enabled.
+
 we can't seem to AC_SUBST(pkgdatadir)
 the version from header-vars overrides
 why is that?
