@@ -46,6 +46,17 @@ Bug fixed in 1.8.0c:
     AC_CONFIG_LINKS($computedlinks).  This version no longer abort in
     that situation.
 
+  - Contrary to mkinstalldirs, $(mkdir_p) was expecting exactly one
+    argument.  This caused two kinds of failures:
+      - Rules installing data in a conditionally defined directory
+        failed when that directory was undefined.  In this case no
+        argument was supplied.
+      - `make installdirs' failed, because several directories were
+        passed to $(mkdir_p).  This was an issue only on platform
+        were $(mkdir_p) is implemented with `install-sh -d'.
+    $(mkdir_p) as been changed to accept 0 or more arguments, as
+    mkinstalldirs did.
+
 * Long-standing bugs:
 
   - Fix an unexpected diagnostic occurring when users attempt
