@@ -1,5 +1,14 @@
 2004-01-08  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): Append `.' to $(mkdir_p).
+	* lib/install-sh: Accept `install-sh -d' with 0..n arguments,
+	as well as `install-sh sources... dest' with multiple sources.
+	* tests/cond33.test: New file.
+	* tests/instsh2.test: Add more checks for install-sh.
+	* tests/transform.test: Test for installdirs.
+	* tests/Makefile.am (TESTS): Add cond33.test
+	Report from Ralf Corsepius.
+
 	* automake.in (handle_configure): Skip AC_CONFIG_LINKS items which
 	do not look like DEST:SRC.
 	* tests/conflnk3.test: Check for AC_CONFIG_LINKS($computed).
